[package]
name = "parallel-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
# هسته بیت‌کوین
bitcoin = { version = "0.29", features = ["serde"] }
bitcoin_hashes = "0.12"

# شبکه
tokio = { version = "1", features = ["full"] }

# پایگاه داده
rocksdb = "0.21"

# RPC
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# کیف پول
bip32 = "0.5"
bip39 = "2.0"
secp256k1 = { version = "0.27", features = ["rand-std"] }

# ابزار
hex = "0.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
[[bin]]
name = "parallel-bitcoin"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"